stilled bugged with an IO error, exported for testing on another machine

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
 [Main]
 FanfictionDirectoryUnderHome: True
-FanfictionDirectory: /fanfiction/
-FanfictionDirectoryIfNotUnderHome: C:/fanfiction/
+FanfictionDirectory: \fanfiction\
+FanfictionDirectoryIfNotUnderHome: C:\fanfiction\
